<resources>
    <string name="app_name">CryptoManager</string>
    <string name="title">Crypto Manager</string>
    <string name="initial_value">R$ 12.000,00</string>
    <string name="btc_abbreviation">BTC</string>
    <string name="eth_abbreviation">ETH</string>
    <string name="chz_abbreviation">CHZ</string>
    <string name="invested">Total investido:</string>
    <string name="invested_default_value">R$ 300.000,00</string>
    <string name="value_on_actual_cotation">Valor na cotação atual :</string>
    <string name="actual_cotation_value">R$ 348.000,00</string>
    <string name="overview">Overview</string>
    <string name="investiments">Investimentos</string>
    <string name="historic">Histórico</string>
    <string name="chiliz_initial_value">R$ 650,00</string>
    <string name="ethereum_initial_value">R$ 1.000,00</string>
    <string name="biticoin_initial_value">R$ 500,00</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="ethereum">Ethereum</string>
    <string name="chiliz">Chiliz</string>
    <string name="high_or_low">1,07 %</string>
    <string name="vinte_quatro_horas">Em 24 horas</string>
    <string name="invested_value">Investido: R$ 2.100,00</string>
    <string name="actual_value_of_invested_value">Atual : R$ 2.200,00</string>
    <string name="user_name">Olá,\nRafael</string>
    <string name="my_capital">TOTAL INVESTIDO :</string>
    <string name="capital_value">R$ 2.132,30</string>
    <string name="wallet_distribution">Distribuição da carteira</string>
    <string name="value_invested">Valor investido :</string>
    <string name="value_invested_money">R$ 1841,52</string>
    <string name="quantitie">Quantidade :</string>
    <string name="quantitie_value">848</string>
    <string name="medium_price">Preço Médio :</string>
    <string name="medium_price_value">R$ 2,12</string>
    <string name="actual_value_coin">Valor Atual da Moeda :</string>
    <string name="actual_coin_price">R$ 1.95</string>
    <string name="cotation_with_all_fine">Preço de venda (Ordem Executada) na cotação atual + corretagem :</string>
    <string name="cotation_with_all_price">R$ 1879,52</string>
    <string name="price_on_actual_cotation">Preço de venda (Ordem Executada) na cotação atual + corretagem + saque :</string>
    <string name="price_value">R$ 1779,52</string>
    <string name="visao_geral">Visão Geral</string>
    <string name="valor_da_entrada">Valor da entrada</string>
    <string name="quantidade">Quantidade</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="real">R$</string>
    <string name="valor">Valor:</string>
    <string name="despesas">Despesas</string>
    <string name="data">Data:</string>
    <string name="descricao">Descrição:</string>
    <string name="expenditures">Despesas</string>
    <string name="rendas">Rendas</string>
    <string name="nova_despesa_renda">Nova despesa/renda</string>
    <string name="nome">Nome</string>
    <string name="data2">Data</string>
    <string name="descri_o">Descrição</string>
</resources>
