<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_invested"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:clickable="false"
        android:focusable="false"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:outlineProvider="none"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image_cripto"
                        android:layout_width="35dp"
                        android:layout_height="34dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/criptoName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/bitcoin"
                        app:layout_constraintStart_toEndOf="@id/image_cripto"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/coin_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/invested_default_value"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/image_cripto"
                        app:layout_constraintTop_toBottomOf="@id/criptoName" />

                    <TextView
                        android:id="@+id/high_or_low"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/high_or_low"
                        app:layout_constraintStart_toStartOf="@id/coin_price"
                        app:layout_constraintTop_toBottomOf="@id/coin_price" />

                    <TextView
                        android:id="@+id/vinte_quatro_horas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/vinte_quatro_horas"
                        android:textSize="10sp"
                        app:layout_constraintStart_toStartOf="@id/coin_price"
                        app:layout_constraintTop_toBottomOf="@id/high_or_low" />

                    <TextView
                        android:id="@+id/invested_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/invested_value"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/coin_price"
                        app:layout_constraintTop_toTopOf="@id/coin_price" />

                    <TextView
                        android:id="@+id/cotation_actual"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actual_value_of_invested_value"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/invested_value"
                        app:layout_constraintTop_toBottomOf="@id/invested_value" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
