<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textview.MaterialTextView
        android:layout_margin="14dp"
        android:id="@+id/income_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text=""
        android:textSize="24sp"
        android:textColor="@color/black"
        tools:text="Cartão de Credito"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/income_details_price_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/income_name"
        app:layout_constraintStart_toEndOf="@+id/income_item_price_currency"
        android:layout_marginTop="14dp"
        android:layout_marginStart="4dp"
        android:text=""
        android:textSize="16sp"
        android:textColor="@color/black"
        tools:text="100.00"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/income_item_price_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/income_name"
        app:layout_constraintStart_toEndOf="@+id/income_price"
        android:text="@string/real"
        android:layout_marginTop="14dp"
        android:layout_marginStart="14dp"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_margin="14dp"
        android:id="@+id/income_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/income_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/valor"
        android:textSize="14sp"
        android:textColor="@color/black"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_margin="14dp"
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/income_price"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/data"
        android:textSize="14sp"
        android:textColor="@color/black"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/income_price"
        app:layout_constraintStart_toEndOf="@+id/date"
        android:text=""
        android:layout_marginTop="14dp"
        android:layout_marginStart="14dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        tools:text="15/10/2021" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_margin="14dp"
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/descricao"
        android:textSize="14sp"
        android:textColor="@color/black"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintStart_toEndOf="@+id/description"
        android:text=""
        android:layout_marginTop="14dp"
        android:layout_marginStart="14dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        tools:text="Cartão de credito fatura" />

</androidx.constraintlayout.widget.ConstraintLayout>